# gamecube-tools

./: .gitignore  Makefile  Makefile.am  autogen.sh  configure.ac  elf2dol.c  gcdspsuite.prj
doc/: GC DSP.doc  manual.txt  opcodes_list.xls  operation.txt  reverse.txt  reverse_new.txt
dxtn/: Makefile
dxtn/source/: dxtn.h  dxtn_compress.c  dxtn_fetch.c
elftool/: elf2dol.c
gdopcode/: assemble.cpp  dbg.h  disassemble.cpp  disassemble.h  opcodes.cpp  opcodes.h
gdtool/: gdsp_tool.h  gdtool.cpp
gxtool/: converter.cpp  gxtexconv.cpp  image.cpp  tfbinarytdf.cpp  tfbinarytdf.h
include/: converter.h  dtypes.h  gdsp_tool.h  parser.h  stdafx.h  texturefile.h  tfbinarytdf.h
source/: converter.cpp  gxtexconv.cpp  image.cpp  image.h  parser.cpp  parser.h  stdafx.cpp  stdafx.h  texturefile.cpp  tfbinary.cpp  tfbinary.h  tfbinarytdf.cpp  tokenstring.cpp  tokenstring.h
squish/: Makefile
squish/source/: alpha.cpp  clusterfit.cpp  clusterfit.h  colourfit.h  colourset.cpp  colourset.h  maths.cpp  maths.h  singlecolourfit.cpp  squish.cpp  stdafx.h
